<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raywenderlich.android.octomembers.ui.member.MemberActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/memberAvator"
        android:layout_width="@dimen/detail_avator_size"
        android:layout_height="@dimen/detail_avator_size"
        android:contentDescription="@string/contentDescription_teamMemberAvator"
        android:padding="@dimen/padding_double"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"
        app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/memberName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:maxLines="3"
        android:padding="@dimen/padding_standard"
        android:textSize="@dimen/detail_name_text_size"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/verticalGuideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="FirstName LastName" />

    <TextView
        android:id="@+id/labelLogin"
        style="@style/member_label"
        android:text="@string/label_login"
        app:layout_constraintBottom_toTopOf="@id/labelCompany"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/labelCompany"
        style="@style/member_label"
        android:text="@string/label_company"
        app:layout_constraintBottom_toTopOf="@id/labelEmail"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/labelLogin"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/labelEmail"
        style="@style/member_label"
        android:text="@string/label_email"
        app:layout_constraintBottom_toTopOf="@id/labelType"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/labelCompany"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/labelType"
        style="@style/member_label"
        android:text="@string/label_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/labelEmail"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/memberLogin"
        style="@style/member_info"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/memberCompany"
        app:layout_constraintStart_toEndOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/memberCompany"
        style="@style/member_info"
        app:layout_constraintBottom_toTopOf="@+id/memberEmail"
        app:layout_constraintStart_toEndOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/memberLogin"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/memberEmail"
        style="@style/member_info"
        app:layout_constraintBottom_toTopOf="@+id/memberType"
        app:layout_constraintStart_toEndOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/memberCompany"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/memberType"
        style="@style/member_info"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/infoVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/memberEmail"
        tools:visibility="invisible" />


    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/infoVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</android.support.constraint.ConstraintLayout>
